# PyChess

./: README.md  pyproject.toml
pychess/: __init__.py  __main__.py  chess.py  constants.py  piece.py  resources.py  util.py
