[tool.poetry]
name = "PyChess"
version = "0.3.0"
description = "A simple chess application made in Python with Pyglet."
authors = ["DanNguyen-CE"]

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.5.15"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pychess = "pychess.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
